# fang-axum-test

./: Cargo.toml  README.md  Shuttle.toml
src/: main.rs
