[package]
name = "fang-axum"
version = "0.1.1"
edition = "2021"

[dependencies]
axum = "0.6.18"
fang = "0.10.3"
shuttle-axum = "0.20.0"
shuttle-fang = { git = "https://github.com/joshua-mo-143/shuttle-fang.git", version = "0.1.1" }
shuttle-runtime = "0.20.0"
shuttle-shared-db = { version = "0.20.0", features = ["postgres"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = "1.28.2"
tracing = "0.1.37"
typetag = "0.2.8"
